k8s/base/mysql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  labels:
    app: sample-blog
    app.kubernetes.io/part-of: sample-blog
spec:
  replicas: 1
  serviceName: mysql
  selector:
    matchLabels:
      app: sample-blog
  template:
    metadata:
      labels:
        app: sample-blog
    spec:
      containers:
      - name: mysql
        image: registry.redhat.io/rhel8/mysql-80
        ports:
        - containerPort: 3306
          protocol: TCP
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "1Gi"
            cpu: "300m"
      serviceAccountName: sample-blog
