k8s/base/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django
  labels:
    app: sample-blog
    tier: django
spec:
  type: ClusterIP
  selector:
    tier: django
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
