k8s/base/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: sample-blog
    tier: mysql
spec:
  type: ClusterIP
  selector:
    tier: mysql
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
