k8s/base/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: sample-blog
    tier: nginx
spec:
  type: ClusterIP
  selector:
    tier: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
