k8s/base/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: sample-blog
    tier: redis
spec:
  type: ClusterIP
  selector:
    tier: redis
  ports:
  - protocol: TCP
    port: 6379 
    targetPort: 6379
